tests/baselines/reference/blockScopedFunctionDeclarationInStrictModule.errors.txt
tests/cases/compiler/blockScopedFunctionDeclarationInStrictModule.ts(2,14): error TS1252: Function declarations are not allowed inside blocks in strict mode when targeting 'ES3' or 'ES5'. Modules are automatically in strict mode.
tests/cases/compiler/blockScopedFunctionDeclarationInStrictModule.ts(6,10): error TS2304: Cannot find name 'foo'.


==== tests/cases/compiler/blockScopedFunctionDeclarationInStrictModule.ts (2 errors) ====
    if (true) {
        function foo() { }
                 ~~~
!!! error TS1252: Function declarations are not allowed inside blocks in strict mode when targeting 'ES3' or 'ES5'. Modules are automatically in strict mode.
        foo(); // ok
    }
    
    export = foo; // not ok
             ~~~
!!! error TS2304: Cannot find name 'foo'.